updating best player list

--- a/index.html
+++ b/index.html
@@ -884,6 +884,10 @@
 								</div>
 								<div class="tg-description">
 									<p>We are a Soccer club that allows individuals to make their personal fitness better and improve mental health along with making friends.</p>
+									<p>Welcome to Bengal Tigers world. It is more than a soccer club to build our Bangladeshi community. Where we have almost 80 plus members.
+										On a hot summer day in 2013 a couple of Bangladeshi came together to pass around a soccer ball and play a short game. What started out with 5-10 people 6 years later has turned into a community bonding and relationship building forum.
+										Locally in northern VA we run a group that plays every Tuesday and Thursday evenings from 9pm-11pm with various members, no more hunting for field’s permits, schedules and organizations are created. Players from all ages play on the field, sons and fathers play together which results in networking chances for many people that otherwise would not have meet. Currently multiple tournaments happen throughout the year that creates a melting pot of old and new generation Bengalis. It becomes a family fun day where competition is high but so are the gatherings of individuals from Maryland, DC & VA. A strong foundation has been created and the future looks bright for the community of Bangladeshi Americans.
+										</p>
 									<div class="tg-btnbox">
 										<a class="tg-btn" href="members.html"><span>Become a member</span></a>
 									</div>
