--- a/internal_2021.html
+++ b/internal_2021.html
@@ -365,6 +365,7 @@
 <div class="col-md-8">
 <div class="sportsmagazine-overview">
 
+<!--// game Awards  \\-->
     <span class="sportsmagazine-gamestats-btn">Game Awards</span>
     <div class="sportsmagazine-overview-skillbar">
         <div class="skillst">
@@ -374,196 +375,196 @@
         </div>
         <div class="skillst">
             <h6>Best Player</h6>
-            <span>TBD</span>
+            <span>Diara</span>
             <div class="progressbar1" data-width="55" data-target="55"></div>
         </div>
         <div class="skillst">
             <h6>Best Striker</h6>
-            <span>TBD</span>
+            <span>Aqil</span>
             <div class="progressbar1" data-width="60" data-target="60"></div>
         </div>
         <div class="skillst">
             <h6>Best Defender</h6>
-            <span>TBD</span>
+            <span>Shawn</span>
             <div class="progressbar1" data-width="63" data-target="63"></div>
         </div>
         <div class="skillst">
             <h6>Best Midfielder</h6>
-            <span>TBD</span>
+            <span>Nabil</span>
             <div class="progressbar1" data-width="71" data-target="71"></div>
         </div>
         <div class="skillst">
             <h6>Best Goalie</h6>
-            <span>TBD</span>
+            <span>Kiron</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
 
         <div class="skillst">
             <h6>Best Left Wing Back</h6>
-            <span>TBD</span>
+            <span>Arcenio</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Best Right Wing Back</h6>
-            <span>TBD</span>
+            <span>Probal</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Best Center Back1</h6>
-            <span>TBD</span>
+            <span>Javed</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Best Center Back2</h6>
-            <span>TBD</span>
+            <span>Mojno</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
 
         <div class="skillst">
             <h6>Best Left Midfielder</h6>
-            <span>TBD</span>
+            <span>Shevu</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Best Right Midfielder</h6>
-            <span>TBD</span>
+            <span>Junior</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Best Center Midfielder-1</h6>
-            <span>TBD</span>
+            <span>Ash</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Best Center Midfielder-2</h6>
-            <span>TBD</span>
+            <span>Anas</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
 
 
         <div class="skillst">
             <h6>Best Left Striker</h6>
-            <span>TBD</span>
+            <span>Razzak</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Best Right Striker</h6>
-            <span>TBD</span>
+            <span>Rayan</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
 
         <div class="skillst">
             <h6>Best Center Striker-1</h6>
-            <span>TBD</span>
+            <span>XL</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Best Center Striker-2</h6>
-            <span>TBD</span>
+            <span>Foyez</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
       <!--different awards-->
        <!--referee awards-->
         <div class="skillst">
             <h6>Referee-1</h6>
-            <span>TBD</span>
+            <span>Mojnu</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Referee-2</h6>
-            <span>TBD</span>
+            <span>Victor</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
             <h6>Referee-3</h6>
-            <span>TBD</span>
+            <span>Jhon</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
          <!--Guest Player awards-->
          <div class="skillst">
-            <h6>Guest Player-1</h6>
-            <span>TBD</span>
+            <h6>Guest Left wing back</h6>
+            <span>Arafat</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-2</h6>
-            <span>TBD</span>
+            <h6>Guest Right wing back</h6>
+            <span>Razvin</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-3</h6>
-            <span>TBD</span>
+            <h6>Guest center back</h6>
+            <span>Iqbal</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-4</h6>
-            <span>TBD</span>
+            <h6>Guest center back</h6>
+            <span>William</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-5</h6>
-            <span>TBD</span>
+            <h6>Guest left midfielder</h6>
+            <span>Tanvir</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-6</h6>
-            <span>TBD</span>
+            <h6>Guest Right midfielder</h6>
+            <span>Henry</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-7</h6>
-            <span>TBD</span>
+            <h6>Guest center midfielder</h6>
+            <span>Jason</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-8</h6>
-            <span>TBD</span>
+            <h6>Guest center midfielder</h6>
+            <span>John</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-9</h6>
-            <span>TBD</span>
+            <h6>Guest striker left</h6>
+            <span>Victor</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-10</h6>
-            <span>TBD</span>
+            <h6>Guest striker right</h6>
+            <span>Vector</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-11</h6>
-            <span>TBD</span>
+            <h6>Guest striker center</h6>
+            <span>Janathan</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-12</h6>
-            <span>TBD</span>
+            <h6>Guest Striker center</h6>
+            <span>Wasi</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
         <div class="skillst">
-            <h6>Guest Player-13</h6>
-            <span>TBD</span>
+            <h6>Best Guest Player</h6>
+            <span>David</span>
             <div class="progressbar1" data-width="75" data-target="75"></div>
         </div>
      <!--Super Supporter-->
      <div class="skillst">
         <h6>Super Supporter-1</h6>
-        <span>TBD</span>
+        <span>Nowser</span>
         <div class="progressbar1" data-width="75" data-target="75"></div>
     </div>
     <div class="skillst">
         <h6>Super Supporter-2</h6>
-        <span>TBD</span>
+        <span>Mrs Jewel</span>
         <div class="progressbar1" data-width="75" data-target="75"></div>
     </div>
     <div class="skillst">
-        <h6>Super Supporter-3</h6>
-        <span>TBD</span>
+        <h6>Role Model</h6>
+        <span>Tariq</span>
         <div class="progressbar1" data-width="75" data-target="75"></div>
     </div>
     <div class="skillst">
-        <h6>Super Supporter-4</h6>
-        <span>TBD</span>
+        <h6>Role Model</h6>
+        <span>Zahid</span>
         <div class="progressbar1" data-width="75" data-target="75"></div>
     </div>
     </div>
