--- a/index.html
+++ b/index.html
@@ -1068,7 +1068,7 @@
 											<div role="tabpanel" class="tab-pane active" id="one">
 												<div class="tg-matchresult">
 													<div class="tg-box">
-														<div class="tg-score"><h3>1 - 0</h3></div>
+														<div class="tg-score"><h3>PK-3-0</h3></div>
 														<div class="tg-teamscore">
 															<strong class="tg-team-logo">
 																<a href="#">
@@ -1076,7 +1076,7 @@
 																</a>
 															</strong>
 															<div class="tg-team-nameplusstatus">
-																<h4><a href="#">Bengal Tigers Red ( Win )</a></h4>
+																<h4><a href="#">Bengal Tigers Blue </a></h4>
 															</div>
 															<!-- <ul class="tg-playernameplusgoadtime">
 																<li>Roman Fenley (15)</li>
@@ -1092,7 +1092,7 @@
 																</a>
 															</strong>
 															<div class="tg-team-nameplusstatus">
-																<h4><a href="#">Bengal Tiger Green ( lose )</a></h4>
+																<h4><a href="#">Bengal Tiger Red </a></h4>
 															</div>
 															<!-- <ul class="tg-playernameplusgoadtime">
 																<li>Ethan Ryberg (22)</li>
@@ -1423,7 +1423,7 @@
 																<h4>BT-BLUE</h4>
 															</div>
 															<div class="tg-box">
-																<h3>FINAL</h3>
+																<h3>PK(3-0)</h3>
 															</div>
 															<div class="tg-box">
 																<strong class="tg-teamlogo">
@@ -1767,12 +1767,12 @@
 										<article class="tg-post">
 											<figure class="tg-postimg">
 												<a href="gallery.html">
-													<img src="header-styles/img/Champion.jpg" alt="image description">
+													<img src="/img/internal2021/champ.jpeg" alt="image description">
 												</a>
 												<figcaption>
 													<ul class="tg-postmetadata">
 														<li><a href="gallery.html">Winners</a></li>
-														<li><a href="gallery.html">04 comments</a></li>
+														<li><a href="gallery.html">Internal Tournamrnt</a></li>
 														<li><a href="gallery.html">2021</a></li>
 													</ul>
 												</figcaption>
@@ -1795,7 +1795,7 @@
 												<figcaption>
 													<ul class="tg-postmetadata">
 														<li><a href="gallery.html">Runners up</a></li>
-														<li><a href="gallery.html">04 comments</a></li>
+														<li><a href="gallery.html">Tournament</a></li>
 														<li><a href="gallery.html">2021</a></li>
 													</ul>
 												</figcaption>
