--- a/members.html
+++ b/members.html
@@ -664,7 +664,7 @@
                     <div class="prof_container">
                         <span class="prof_info">Faruq<br><span>Defender/Midfielder</span></span>
                         <div class="overlay_pl">
-                        <img src="img/2015/match_2015(7).jpeg" alt="gg">
+                        <img src="img/internal2021/156.jpeg" alt="gg">
                         <div class="contents">
                             <!-- <span>Defender/Midfielder</span> -->
                             <!-- <h4>Faruq</h4> -->
